K1J-447: Fixed bug for event available for patient and set error handler for xml validator to correct instance